apps/cxs-mimir-api/overlays/staging/mimir-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cxs-mimir-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: agents.contextsuite.dev
      http:
        paths:
          - backend:
              service:
                name: cxs-mimir-api
                port:
                  number: 8000
            path: /gpt-api
            pathType: Prefix
  tls:
    - hosts:
        - agents.contextsuite.dev
      secretName: agents-contextsuite-com-tls
